-Implemented custom themed scrollbars for webkit -Fixed bug in chrome where sidebar would resize

--- a/PHPTestProject/style/PhotoViewer.css
+++ b/PHPTestProject/style/PhotoViewer.css
@@ -71,7 +71,21 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    overflow-x: auto;
+    overflow-x: scroll;
+}
+
+#ThumbnailCarousel::-webkit-scrollbar {
+    width: 6px;
+    background-color: lightgrey;
+}
+
+#ThumbnailCarousel::-webkit-scrollbar-thumb {
+    background-color: #73bbdf;
+}
+
+#ThumbnailCarousel::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
 }
 
 #ThumbnailCarousel img {
